scroll animation fix on firefox

--- a/css/style.css
+++ b/css/style.css
@@ -71,7 +71,7 @@ body{
 }
 
 .scroll-anim h1{
-    font-size: .1em;
+    font-size: .5em;
     font-family: Montserrat;
     line-height: 3em;
     text-transform: uppercase;
